map feature: connects the projects page to the google maps api

--- a/frontend/public/style.css
+++ b/frontend/public/style.css
@@ -16,4 +16,5 @@ ul.nav-links li {
     justify-content: space-between;
     align-items: center;
     background-color: #98bf64;
+    height: 100%;
 }
