--- a/public/style.css
+++ b/public/style.css
@@ -4,13 +4,22 @@ body {
   background-color: #c1b5ad;
 }
 
+a {
+  text-decoration: none;
+}
+
 ul.nav-links {
   list-style-type: none;
   display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 ul.nav-links li {
-  margin-right: 1em;
+  margin: 1em;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .nav-container h1 {
@@ -24,9 +33,13 @@ ul.nav-links li {
   background-color: #98bf64;
 }
 
+.sprite {
+  height: 40px;
+  width: 40px;
+}
+
 .map-container {
   position: absolute;
-  border: yellow dotted;
   top: 0;
   bottom: 0;
   left: 0;
@@ -57,4 +70,12 @@ ul.nav-links li {
 #map {
   width: 100%;
   height: 45vw;
+}
+
+#logo,
+#nav-me {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 1em;
 }
