feature: single org view now has a donate button and is hooked up to list all projects for the org

--- a/public/style.css
+++ b/public/style.css
@@ -58,3 +58,23 @@ ul.nav-links li {
   width: 100%;
   height: 45vw;
 }
+
+.singleOrg {
+  margin: 10px;
+}
+
+.orgDetails {
+  display: flex;
+  justify-content: center;
+}
+.orgImg {
+  padding: 20px;
+}
+
+.orgInfo {
+  padding: 20px;
+}
+
+.donation {
+  padding-top: 20px;
+}
