--- a/public/style.css
+++ b/public/style.css
@@ -154,3 +154,11 @@ button:hover {
   margin-top: 0.5em;
   color: red;
 }
+
+.settings {
+  background-color: #f2f2f2;
+  width: 70%;
+  margin: auto;
+  border-radius: 4px;
+  padding: 1em;
+}
