--- a/public/style.css
+++ b/public/style.css
@@ -103,24 +103,24 @@ ul.nav-links li {
 }
 
 .projectForm {
-  margin: 1em auto;
+  margin: auto;
   background-color: #f2f2f2;
   border-radius: 0.5em;
   padding: 2em;
   border: 1px black;
   width: 30em;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
-.projectForm label,
-.projectForm input,
-.projectForm textarea {
-  display: block;
-  width: auto;
+.project-form {
+  display: flex;
+  padding-top: 10px;
 }
 
 .projectForm label {
   margin: auto;
-  padding-top: 5px;
 }
 
 .projectForm input,
@@ -129,17 +129,17 @@ ul.nav-links li {
   width: 25em;
   border: 1px solid #ccc;
   border-radius: 4px;
-  box-sizing: border-box;
 }
 
 button {
   background-color: #98bf64;
   color: white;
-  padding: 12px 20px;
+  padding: 15px 22px;
   margin: 1em auto;
   border: none;
   border-radius: 4px;
   cursor: pointer;
+  vertical-align: middle;
 }
 
 button:hover {
