--- a/public/style.css
+++ b/public/style.css
@@ -25,6 +25,7 @@ ul.nav-links li {
 
 .nav-container h1 {
   margin-left: 1em;
+  font-family: 'Press Start 2P', cursive;
 }
 
 .nav-container {
@@ -32,6 +33,9 @@ ul.nav-links li {
   justify-content: space-between;
   align-items: center;
   background-color: #98bf64;
+}
+.nav-container:visited {
+  color: #000000;
 }
 
 .sprite {
