--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,5 @@
 body {
-  margin: 1em;
+  margin: 0;
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
   background-color: #c1b5ad;
 }
