--- a/public/style.css
+++ b/public/style.css
@@ -39,10 +39,15 @@ ul.nav-links li {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  font-family: 'Press Start 2P', cursive;
 }
 
 .nav-container h1 {
   margin-left: 1em;
+  font-family: 'Press Start 2P', cursive;
+}
+
+.pixel-font {
   font-family: 'Press Start 2P', cursive;
 }
 
