fix (style.css): adds padding around flower settings, bee settings, and single org view

--- a/public/style.css
+++ b/public/style.css
@@ -48,7 +48,10 @@ button:hover {
   padding: 6px;
   font-weight: bold;
 }
-
+.singleOrg,
+.settings {
+  padding: 6em;
+}
 .orgDetails {
   display: flex;
   justify-content: center;
